# icp-identifier

./: .gitignore  Makefile  api.py  app.py  i18n.py  pyproject.toml  requirements.txt  start.py
.streamlit/: config.toml
data/: INSTRUCOES_COLETA.md  companies_b3.json  sample.csv  template_customers.csv  template_prospects.csv
data/cache/: atos.json  capgemini.json  criteo.json  dassault.json  datadog.json  hubspot.json  natura.json  nubank.json  ovhcloud.json  salesforce.json  shopify.json  stone.json  stripe.json  totvs.json  weg.json
engine/: analyzer.py  client_generator.py  intelligence.py  models.py  researcher.py  scorer.py
scripts/: generate_showcase.py
